refactor(scheduler): Replace assert, cleanup comments and remove trivial tests